# MapReduce

./: CMakeLists.txt  test-mr.sh
include/: ThreadPool.h  coordinator.h  mapreduce.h  task.h  worker.h
include/rpc/: client.h  delimiter_codec.h  message_codec.h  server.h
src/: ThreadPool.cpp  coordinator.cpp  main.cpp  main_coordinator.cpp  main_worker.cpp  mapreduce.cpp  oldmain.cpp  worker.cpp
src/rpc/: client.cpp  delimiter_codec.cpp  server.cpp
